5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1832_1642.log
== TEST (2019-06-13 18:20:26) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
i=0
for pos in v:
	if(pos % 5 == 0):
		i= i + 1

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:23:00) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
i=0
for pos in v:
	if(pos % 5 == 0):
		i= i + 1

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:32) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 = 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
0.591887
-- ERROR:
  File "/home/codebench/codes/1832/1642/main.py", line 11
    if(a[i] % 5 = 0):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:37) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 = 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
0.523033
-- ERROR:
  File "/home/codebench/codes/1832/1642/main.py", line 11
    if(a[i] % 5 = 0):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:41) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 = 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
0.496878
-- ERROR:
  File "/home/codebench/codes/1832/1642/main.py", line 11
    if(a[i] % 5 = 0):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:41) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 = 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
File "XXXX", line 11
    if(a[i] % 5 = 0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:50) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
0.978798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 10, in <module>
    for i in range (size(a)):
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:51) 
-- CODE:
from numpy import*
v = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:23:35) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
0.975833
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 4, in <module>
    for i in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:23:38) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
0.783993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1642/main.py", line 4, in <module>
    for i in v:
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:23:39) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in v:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:23:54) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
1.04632
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:23:57) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:24:10) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:26:54) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:28:33) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:28:36) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
1.01147
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[1 1 1 1 1]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:29:28) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:32:02) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = impar[b] + 1
		b = b + 1
print(impar)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:32:37) 
-- CODE:
from numpy import*
a = array(eval(input("numero de alunos: ")))
p=0
for i in a:
	if(i % 5 == 0):
		p= p + 1
print(p)
impar = zeros(p, dtype = int)
b = 0
for i in range (size(a)):
	if(a[i] % 5 == 0):
		impar[b] = i
		b = b + 1
print(impar)

	
	

-- EXECUTION TIME:
1.01602
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
